syntax = "proto3";
package ex5;
option go_package=".";

message UserPartner {
         string id = 11;
         string user_id = 1;
        //  string user_name = 1;
         string partner_id = 3;
         string alias_user_id = 5;
         map<string, int64> apps = 6;
         string phone = 7;
         int64 created = 10;
         int64 updated_at = 12;
     }

 message UserPartnerRequest {
      string user_id = 1;
      string phone = 2;
      int64 limit = 3;
 }
